--- a/cookbooks/10xeng-mc/templates/default/sv-broker-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-broker-run.erb
@@ -2,4 +2,4 @@
 exec 2>&1
 
 cd /home/microcloud/deploy/service
-exec /home/microcloud/deploy/service/bin/service broker
+exec /home/microcloud/deploy/service/bin/broker.sh
