Fixed service supervisor scripts

--- a/cookbooks/10xeng-mc/templates/default/sv-git_adm-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-git_adm-run.erb
@@ -2,4 +2,4 @@
 exec 2>&1
 
 cd /home/microcloud/deploy/service
-exec /home/microcloud/deploy/service/bin/service git_adm
+exec /home/microcloud/deploy/service/bin/service.sh git_adm
