--- a/cookbooks/10xeng-mc/templates/default/sv-ec2-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-ec2-run.erb
@@ -2,4 +2,4 @@
 exec 2>&1
 
 cd /home/microcloud/deploy/service
-exec /home/microcloud/deploy/service/bin/service ec2
+exec /home/microcloud/deploy/service/bin/service.sh ec2
