--- a/cookbooks/10xeng-mc/templates/default/sv-lxc-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-lxc-run.erb
@@ -2,4 +2,4 @@
 exec 2>&1
 
 cd /home/microcloud/deploy/service
-exec /home/microcloud/deploy/service/bin/service lxc
+exec /home/microcloud/deploy/service/bin/service.sh lxc
