--- a/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
+++ b/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
@@ -5,8 +5,8 @@ server {
 	proxy_set_header Host $http_host;
     proxy_redirect off;
 
-	auth_basic "Restricted";
-    auth_basic_user_file /home/microcloud/htpasswd;
+	#auth_basic "Restricted";
+    #auth_basic_user_file /home/microcloud/htpasswd;
 
 	location / {
     	proxy_pass http://127.0.0.1:8080/;
