--- a/cookbooks/10xeng-mc/templates/default/sv-ec2-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-ec2-run.erb
@@ -4,4 +4,4 @@ exec 2>&1
 export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
 
 cd /home/microcloud/deploy/service
-exec /home/microcloud/deploy/service/bin/service.sh ec2
+exec chpst -u microcloud -U microcloud /home/microcloud/deploy/service/bin/service.sh ec2
