Services are wrapped & launch with their own ssh-agent

--- a/cookbooks/10xeng-mc/templates/default/sv-broker-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-broker-run.erb
@@ -4,4 +4,4 @@ exec 2>&1
 export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
 
 cd /home/microcloud/deploy/service
-exec chpst -u microcloud -U microcloud /home/microcloud/deploy/service/bin/broker.sh
+exec chpst -u microcloud -U microcloud ssh-agent /home/microcloud/deploy/service/bin/broker.sh
