Added missing 'key' service

--- a/cookbooks/10xeng-mc/templates/default/Procfile.erb
+++ b/cookbooks/10xeng-mc/templates/default/Procfile.erb
@@ -4,3 +4,4 @@ ec2: bundle exec ./service.rb ec2
 lxc: bundle exec ./service.rb lxc
 loop: bundle exec ./service.rb loop
 git_adm: bundle exec ./service.rb git_adm
+key: bundle exec ./service.rb key
