Fixed microcloud DNS names

--- a/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
+++ b/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name mc.dev.10xengineer.me mc.dev.laststation.net;
+	server_name mc.apac.external.10xlabs.net mc.apac.internal.10xlabs.net;
 
 	proxy_set_header Host $http_host;
     proxy_redirect off;
