--- a/cookbooks/10xeng-mc/templates/default/sv-compile_serv-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-compile_serv-run.erb
@@ -4,4 +4,5 @@ exec 2>&1
 export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
 
 cd /home/microcloud/deploy/comp_serv
+# configure node
 exec chpst -u microcloud -U microcloud ssh-agent /home/microcloud/deploy/comp_serv/compile_serv.sh <%= node["comp_serv"]["node"] %>
