Added localhost to MC server name
When running through tunnel localhost is often the target for developers. Need to understand secruity implicatins though.

--- a/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
+++ b/cookbooks/10xeng-mc/templates/default/microcloud.conf.erb
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name mc.apac.external.10xlabs.net mc.apac.internal.10xlabs.net;
+	server_name mc.apac.external.10xlabs.net mc.apac.internal.10xlabs.net localhost;
 
 	proxy_set_header Host $http_host;
     proxy_redirect off;
