--- a/cookbooks/tomcat/templates/default/server.xml.erb
+++ b/cookbooks/tomcat/templates/default/server.xml.erb
@@ -19,7 +19,7 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="<%= instance.shutdown_port %>" shutdown="SHUTDOWN">
+<Server port="${shutdown.port}" shutdown="SHUTDOWN">
   <!-- Security listener. Documentation at /docs/config/listeners.html
   <Listener className="org.apache.catalina.security.SecurityListener" />
   -->
@@ -65,30 +65,30 @@
          Java HTTP Connector: /docs/config/http.html (blocking & non-blocking)
          Java AJP  Connector: /docs/config/ajp.html
          APR (HTTP/AJP) Connector: /docs/apr.html
-         Define a non-SSL HTTP/1.1 Connector on port <%= instance.http_port %>
+         Define a non-SSL HTTP/1.1 Connector on port ${http.port}
     -->
-    <Connector port="<%= instance.http_port %>" protocol="HTTP/1.1"
+    <Connector port="${http.port}" protocol="HTTP/1.1"
                connectionTimeout="20000"
-               redirectPort="<%= instance.ssl_port %>" />
+               redirectPort="${ssl.port}" />
     <!-- A "Connector" using the shared thread pool-->
     <!--
     <Connector executor="tomcatThreadPool"
-               port="<%= instance.http_port %>" protocol="HTTP/1.1"
+               port="${http.port}" protocol="HTTP/1.1"
                connectionTimeout="20000"
-               redirectPort="<%= instance.ssl_port %>" />
+               redirectPort="${ssl.port}" />
     -->
-    <!-- Define a SSL HTTP/1.1 Connector on port <%= instance.ssl_port %>
+    <!-- Define a SSL HTTP/1.1 Connector on port ${ssl.port}
          This connector uses the JSSE configuration, when using APR, the
          connector should be using the OpenSSL style configuration
          described in the APR documentation -->
     <!--
-    <Connector port="<%= instance.ssl_port %>" protocol="HTTP/1.1" SSLEnabled="true"
+    <Connector port="${ssl.port}" protocol="HTTP/1.1" SSLEnabled="true"
                maxThreads="150" scheme="https" secure="true"
                clientAuth="false" sslProtocol="TLS" />
     -->
 
-    <!-- Define an AJP 1.3 Connector on port <%= instance.ajp_port %> -->
-    <Connector port="<%= instance.ajp_port %>" protocol="AJP/1.3" redirectPort="${ssl.port}" />
+    <!-- Define an AJP 1.3 Connector on port ${ajp.port} -->
+    <Connector port="${ajp.port}" protocol="AJP/1.3" redirectPort="${ssl.port}" />
 
 
     <!-- An Engine represents the entry point (within Catalina) that processes
