--- a/cookbooks/tomcat/templates/default/server.xml.erb
+++ b/cookbooks/tomcat/templates/default/server.xml.erb
@@ -30,7 +30,9 @@
   <!-- Prevent memory leaks due to use of particular java/javax APIs-->
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
+  <% if Tomcat.version_parser(node["tomcat"]["version"])[:major] == 7  %>
   <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
+  <% end %>
 
   <!-- Global JNDI resources
        Documentation at /docs/jndi-resources-howto.html
