--- a/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
@@ -1,6 +1,6 @@
 #!/bin/sh
-exec 2>&1
 
 export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
 
-exec chpst -u microcloud -U microcloud ssh-agent /home/microcloud/deploy/bin/microcloud
+exec 2>&1
+exec chpst -u microcloud -U microcloud -l /home/labsys/base /usr/bin/coffee api.coffee
