--- a/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
@@ -2,5 +2,7 @@
 
 export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
 
+cd /home/labsys/base
+
 exec 2>&1
-exec chpst -u microcloud -U microcloud -l /home/labsys/base /usr/bin/coffee api.coffee
+exec chpst -u labsys:labsys /usr/bin/coffee microcloud.coffee
