Restart services by default
Temporary workaround before we move to package based deployment, or any other mechanism that will provide much more granular notifications

--- a/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
+++ b/cookbooks/10xeng-mc/templates/default/sv-microcloud-run.erb
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-export MICROCLOUD_ENV=<%= node["microcloud"]["environment"] %>
+export NODE_ENV=<%= node["microcloud"]["environment"] %>
 
 cd /home/labsys/base
 
